Overview of changes in Etherape 0.1.3
* Webpage now has a much more interesting screenshot thanks 
  to Nico Lumma 
* Buttons are in English now.

Overview of changes in Etherape 0.1.2
* James Wallace provided code to automatically
  detect proper network interface. It now compiles in NetBSD.
* IP number displayed if no /etc/ethers is available.
  IP host name will be there in the Saturday Night edition. :-)

Overview of changes in Etherape 0.1.1
* First look at GUI side of things
* Now you can dinamically reset the node radius using a slider
* First users reports! Thanks R., Don!
* Firts improvements due to user feedback:
  - Solved configuration problem for some people
  - Improved web page and README: reference to /etc/ethers

Overview of changes in Etherape 0.1.0
* Diagram resizes with window
* Basic functionality is all there now, and calls for a minor
  version upgrade. :-)
  
Overview of changes in Etherape 0.0.8
* Correctly (I hope) calculates average traffic intensity
  for nodes and links. The proper constant multiplier
  should be user defined.

Overview of changes in Etherape 0.0.7:
* First version showing links among nodes
* Aborts gracefully if run by non-root.
* http://etherape.sourceforge.net has a screenshot.
* Expect proper node size and link width calculation in 0.0.8

Overview of changes in Etherape 0.0.6:
* Copied proper libpcap autoconfigure detection function from ethereal
* Added ethernet address resolution functions from ethereal

Overview of changes in Etherape 0.0.5:
* Now uses gnome_canvas to display the diagram

Overview of changes in Etherape 0.0.4:
* Node size is now an average of the last ten seconds traffic.
* Proper distribution file.

Overview of changes in Etherape 0.0.3:
* Added gnome support.
* Substituted hash table for binary tree to store nodes
* Correctly display hardware addresses.

Overview of changes in Etherape 0.0.2:
* Displays circles representing nodes and text which will
  identify it eventually.
  