@@ -69,7 +69,7 @@ I owe to, because they allowed to make etherape possible:
     it work! 
     
 * Last, but not least, my girlfriend, for putting up with a many
-  to many relationship between us an my computers. :-)
+  to many relationship between us and my computers. :-)
   
 
 
@@ -86,8 +86,10 @@ thanks to user patches.
 
 And guess what. Version 0.1.2 has been developped in 7 days on 
 an old 486 with 48Mb of memory, at the confort of my home, using
-just a 28.8kbps link to the internet to download everything 
-necessary. I really didn't think it would be this easy.
+just a 28.8kbps link connected to my 8Mb 486 router, mail server,
+www proxy, all running linux (anybody has an old 36pin bank to 
+spare? :-)). And everything I needed I simply downloaded. 
+I really didn't think it would be this easy.
 
 It's not that I'm smart at all, it's the wonders of the 
 collaborative efforts worldwide, the synergy of a movement 
@@ -97,15 +99,3 @@ to make a bit happier many other people all over the globe.
 
 Today I feel happy. It's the realization that we are making
 a better world. :-)
-
-
-
-
-
-And after thanking everybody, just a little question I feel
-a bit embarrased to ask. :-)
-Does anybody have a bank of 32pin memory to spare? My
-486DX50, 8Mb RAM router, mail server and www proxy could do 
-with a bit more memory, although I feel sad about cuttting
-out its 114 days uptime. Email me if you are interested.
-(Humm... That felt bad. I feel like a Benetton commercial)
